--- a/styles/default/_variables.scss
+++ b/styles/default/_variables.scss
@@ -167,8 +167,9 @@ $btn-border-width:  2px;
   letter-spacing: .02rem;
 }
 
-/////// NAVA
+/////// NAV
 
+$brand-nav-background:              $brand-dark;
 $navbar-brand-font-size:            $font-size-base;
 
 $navbar-dark-color:                 rgba($white, .5);
