Icons for monitoring quality points

--- a/styles/app/_app-styles.scss
+++ b/styles/app/_app-styles.scss
@@ -362,3 +362,8 @@ $active-segment: firebrick;
   background-color: $active-segment;
   border: 2px solid lighten($black,20%);
 }
+
+/* Monitoring Quality Point Icon (star symbol) */
+.mqpoint-icon {
+  color: rgba(0, 0, 0, 0.5);
+}
