Action detail page: show monitoring quality points

--- a/styles/app/_app-styles.scss
+++ b/styles/app/_app-styles.scss
@@ -151,6 +151,11 @@ blockquote {
   min-width: 20em;
 }
 
+/* Styling for monitoring quality points popover for action */
+.action-mqpoints-popover {
+  min-width: 40em; /* Make popover wide enough */
+}
+
 /// Open City Design Style defaults
 
 .btn-outline-light:hover {
